--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "create-component": "ng generate component"
+    "create-component": "ng generate component",
+    "create-module": "ng g m",
+    "create-service": "ng generate service"
   },
   "private": true,
   "dependencies": {
