--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref": "./",
             "outputPath": "dist/angular-scss",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -30,8 +31,9 @@
               "src/assets"
             ],
             "styles": [
+              "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.scss"
+              "node_modules/sweetalert2/src/sweetalert2.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
