--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "angular-scss",
-  "version": "0.0.0",
+  "name": "fbee",
+  "version": "1.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,7 +10,8 @@
     "test": "ng test",
     "create-component": "ng generate component",
     "create-module": "ng g m",
-    "create-service": "ng generate service"
+    "create-service": "ng generate service",
+    "electron-builder app": "electron-packager . --platform=win32"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +27,7 @@
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.27",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -33,6 +36,8 @@
     "@angular/cli": "~16.1.8",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "electron": "^27.0.0-alpha.1",
+    "electron-reload": "^2.0.0-alpha.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
